--- a/app/views/layouts/application.mobile.haml
+++ b/app/views/layouts/application.mobile.haml
@@ -10,6 +10,6 @@
     %link{ :rel => "shortcut icon", :href => "/images/favicon.ico" }
     = yield :head if content_for?(:head)
   %body
-    #container{class: content_for?(:site_layout) ? yield(:site_layout) : "site"}
+    #container
       = use_header()
       = content_for?(:content) ? yield(:content) : yield
