--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -4,7 +4,7 @@
 - css :posts_display
 
 .tag
-  %h1= @keyword
+  %h1= %("#{@keyword}"#{@scope_words})
   .timeline{ :data => { :widget => "sugar" } }
     = render :partial => "posts/post_full", :collection => @posts, :as => :post
     = pagination(@posts)
