--- a/app/views/layouts/_header_common.html.haml
+++ b/app/views/layouts/_header_common.html.haml
@@ -10,15 +10,15 @@
         我的家
       %span><
         |    
-    %a.z_buzz{ href: buzz_path, title: "回复"}><
-      回复
+      %a.z_buzz{ href: buzz_path, title: "回复"}><
+        回复
       %span><
-        - if not current_user.nil? and current_user.comments_notices.unreads.count > 0
+        - if current_user.comments_notices.unreads.count > 0
           = "(#{current_user.comments_notices.unreads.count})"
-    %span><
-      |    
-    %a.z_messages{ href: messages_path, title: "消息"}><
-      消息
+      %span><
+        |    
+      %a.z_messages{ href: messages_path, title: "消息"}><
+        消息
       %span><
         - if not current_user.nil? and current_user.messages.unreads.count > 0
           = "(#{current_user.messages.unreads.count})"
