--- a/app/views/layouts/_dashboard_menu.html.haml
+++ b/app/views/layouts/_dashboard_menu.html.haml
@@ -7,4 +7,4 @@
     %a{ href: favors_posts_path, title: "我喜欢的"}<
       %span 我喜欢的
   .my_search
-    = render partial: 'shared/search'
+    = search_bar("subs")
