--- a/app/views/posts/news.html.haml
+++ b/app/views/posts/news.html.haml
@@ -25,7 +25,8 @@
       探索发现
       %span.z_more<
         &nbsp;
-
+  .my_search
+    = search_bar
   .timeline{ :data => { :widget => "sugar" } }
     = render :partial => "posts/post_full", :collection => @posts, :as => :post
 
