--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -290,12 +290,10 @@ a.logo
   .z_name
     word-wrap: break-word        
 
-.latest, .tag
+.latest, .tag_page
   h1
     margin: 30px 0px
     color: #009fff
-.latest
-  h1
     float: left
   .z_nav
     float: left
@@ -304,10 +302,11 @@ a.logo
       @include border-radius(3px)
   .my_search
     float: right
-    margin-top: 30px
-    margin-right: 72px
+    margin: 30px 72px 30px 0
   a.tar
     margin-right: 0
+.site .tag_page .my_search
+  margin-right: 222px
 
 .search_bar
   background: url('/images/embed/dash_search.gif')
