--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -329,6 +329,7 @@ a.logo
   .overTxtLabel
     font-size: 14px
     padding-top: 5px
+    width: 136px
   .submit
     height: 30px
     line-height: 30px
