--- a/public/stylesheets/lib.sass
+++ b/public/stylesheets/lib.sass
@@ -43,7 +43,8 @@ $slide-button-size: 18px
 @mixin clear_fix
   *zoom: 1
   &:after
-    content: ' '
+    content: "."
+    font-size: 0
     display: block
     height: 0
     clear: both
