--- a/app/views/comments/index.mobile.haml
+++ b/app/views/comments/index.mobile.haml
@@ -15,7 +15,7 @@
                   = "(#{comment.created_at})"
       %li
         .txt
-          %textarea{ :name => "content", placeholder: "回复内容" }
+          %textarea{ :name => "content", placeholder: "回复内容", rows: 3}
     %input{ type: "hidden", name: "show_post", value: "true"}
     .c_submitter
       %input.greenButton{ :type => "submit", :value => "评论", :data => { :tgt => "reply" } }
