--- a/public/stylesheets/mobile.sass
+++ b/public/stylesheets/mobile.sass
@@ -203,11 +203,11 @@ ul
       padding: 0
       display: inline-block
       margin-left: 0px
-      width: 100%
+      width: 99%
       -webkit-appearance: textarea
     textarea
       height: 360px
-      padding: 0
+      padding: 5px
       text-indent: -2px
     select
       text-indent: 0px
@@ -234,6 +234,8 @@ ul
       color: #009A93
       font-size: 12px
       font-weight: normal
+    textarea
+      height: auto
   .blog
     h2
       height: 30px
