--- a/app/views/layouts/application.mobile.haml
+++ b/app/views/layouts/application.mobile.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %meta{'http-equiv' => 'content-type', 'content' => 'text/html; UTF-8'}
+    %meta{content: "width=device-width, initial-scale=1.0, minimum-scale=1.0", name: "viewport"}
     = content_for?(:meta) ? content_for(:meta) : ""
     %title<
       = content_for?(:title) ? content_for(:title) : "宽岛"
