--- a/public/stylesheets/mobile.sass
+++ b/public/stylesheets/mobile.sass
@@ -109,13 +109,10 @@ body
     background: url(/images/mobile/toolbar.png) #6d84a2 repeat-x
     position: relative
     h1
-      position: absolute
-      overflow: hidden
-      left: 50%
-      top: 10px
-      line-height: 1em
-      margin: 1px 0 0 -75px
-      height: 40px
+      float: left
+      padding-left: 75px
+      margin-top: 2px
+      width: 100px
       font-size: 20px
       font-weight: bold
       text-shadow: rgba(0, 0, 0, 0.4) 0px -1px 0
