--- a/public/stylesheets/mobile.sass
+++ b/public/stylesheets/mobile.sass
@@ -10,7 +10,7 @@ body
   -webkit-touch-callout: none
 
 body
-  background: rgb(0, 0, 0)
+  background: #DCE1EB
 #container
   background: rgb(197,204,211) url(/images/mobile/pinstripes.png)
   h1, h2
@@ -203,7 +203,7 @@ ul
       width: 99%
       -webkit-appearance: textarea
     textarea
-      height: 360px
+      height: 240px
       padding: 5px
       text-indent: -2px
     select
