--- a/public/stylesheets/mobile.sass
+++ b/public/stylesheets/mobile.sass
@@ -49,7 +49,7 @@ body
     right: 6px
     margin: 0
     border-width: 0 5px
-    padding: 0 9px
+    padding: 0 5px
     width: auto
     height: 30px
     line-height: 30px
@@ -110,9 +110,9 @@ body
     position: relative
     h1
       float: left
-      padding-left: 75px
-      margin-top: 2px
-      width: 100px
+      padding-left: 85px
+      margin: 2px 0 0 0
+      width: 1px
       font-size: 20px
       font-weight: bold
       text-shadow: rgba(0, 0, 0, 0.4) 0px -1px 0
