--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -110,6 +110,7 @@ pre
       padding: 4px
       height: 24px
       color: $blue
+      width: 100%
       .z_more
         display: inline-block
         *display: inline
