some messages style

--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -131,6 +131,12 @@
     text-decoration: underline
 
 .messages
+  float: right
+  padding-bottom: 15px
+
+  ul
+    margin-bottom: 15px
+
   .avatar_name
     font-weight: bold
     a
