--- a/app/views/layouts/_header_common.html.haml
+++ b/app/views/layouts/_header_common.html.haml
@@ -11,7 +11,12 @@
         window.WEB_SOCKET_SWF_LOCATION = 'http://#{@comet_config["server"]}/WebSocketMain.swf'
         var jug = new Juggernaut({host: '#{@comet_config["host"]}', port: #{@comet_config["port"] || 8080}})
         document.addEvent("domready", function() {
+          K.comet_header_counter({
+            comments_count: #{current_user.comments_notices.unreads.count},
+            messages_count: #{current_user.messages.unreads.count}
+          })
           jug.subscribe('#{current_user.channel}', function(data){
+            console.log(data)
             K.comet_header_counter(data)
           })
         })
@@ -22,15 +27,11 @@
       %a.z_buzz{ href: buzz_path, title: "回复"}><
         回复
         %span#comments_count><
-          - if current_user.comments_notices.unreads.count > 0
-            = "(#{current_user.comments_notices.unreads.count})"
       %span><
         |    
       %a.z_messages{ href: messages_path, title: "消息"}><
         消息
-        %span><
-          - if current_user.messages.unreads.count > 0
-            = "(#{current_user.messages.unreads.count})"
+        %span#messages_count><
       %span><
         |    
       .menu><
