--- a/app/views/layouts/_header_common.html.haml
+++ b/app/views/layouts/_header_common.html.haml
@@ -14,10 +14,10 @@
             comments_count: #{current_user.comments_notices.unreads.count},
             messages_count: #{current_user.messages.unreads.count}
           })
-          -# var jug = new Juggernaut({host: '#{@comet_config["host"]}', port: #{@comet_config["port"] || 8080}})
-          -# jug.subscribe('#{current_user.channel}', function(data){
-          -#   K.comet_header_counter(data)
-          -# })
+          // var jug = new Juggernaut({host: '#{@comet_config["host"]}', port: #{@comet_config["port"] || 8080}})
+          // jug.subscribe('#{current_user.channel}', function(data){
+          //   K.comet_header_counter(data)
+          // })
         })
       %a.z_dashboard{href: fucking_root}><
         我的家
