--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -470,8 +470,8 @@ a.page_name
     font-size: 14px
 
 .dashboard_flash
-  width: 680px
-  height: 40px
+  width: 600px
+  height: 30px
   background-color: #b8e3b7
   color: #808080
   font-size: 18px
@@ -479,13 +479,13 @@ a.page_name
   text-align: center
   position: absolute
   top: 100px
-  left: 20px
+  left: 100px
   border-bottom-right-radius: 10px
   border-bottom-left-radius: 10px
   -moz-border-radius-bottomright: 10px
   -moz-border-radius-bottomleft: 10px
   webkit-border-bottom-right-radius: 10px
-  webkit-border-bottom-right-radius: 10px
+  webkit-border-bottom-left-radius: 10px
   a
     @include hide_text
     width: 14px
@@ -497,6 +497,29 @@ a.page_name
     right: 20px
     cursor: pointer
     overflow: hidden
+
+.dashboard_news
+  width: 580px
+  height: 30px
+  background-color: #b8e3b7
+  color: #808080
+  font-size: 14px
+  line-height: 40px
+  text-align: right
+  position: absolute
+  padding-right: 20px
+  top: 100px
+  left: 100px
+  border-bottom-right-radius: 10px
+  border-bottom-left-radius: 10px
+  -moz-border-radius-bottomright: 10px
+  -moz-border-radius-bottomleft: 10px
+  webkit-border-bottom-right-radius: 10px
+  webkit-border-bottom-left-radius: 10px
+  display: none
+  a
+    color: #808080
+    cursor: pointer
 
 .page_operation_item
   _padding-top: 5px
