em for navigator

--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -78,6 +78,9 @@ pre
       overflow: hidden
     &.z_account
       margin-right: 0
+  em
+    color: #3366cc
+    font-style: normal
   .highlight
     color: #fff
     @include border-radius(8px)
