缩短新消息提示宽度

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -29,7 +29,7 @@
           %a.cancel{onclick: "this.getParent('.dashboard_flash').destroy();return false;"}
             关闭
       .dashboard_news#dashboard_news
-        %a{onclick: "window.location.reload();return false"}
+        %a{onclick: "window.location='/home';return false"}
           有新内容啦，点击查看
       :javascript
         document.addEvent("domready", function() {
