--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -499,7 +499,7 @@ a.page_name
     overflow: hidden
 
 .dashboard_news
-  width: 580px
+  width: 240px
   height: 30px
   background-color: #b8e3b7
   color: #808080
@@ -509,14 +509,14 @@ a.page_name
   position: absolute
   padding-right: 20px
   top: 100px
-  left: 100px
+  left: 440px
   border-bottom-right-radius: 10px
   border-bottom-left-radius: 10px
   -moz-border-radius-bottomright: 10px
   -moz-border-radius-bottomleft: 10px
   webkit-border-bottom-right-radius: 10px
   webkit-border-bottom-left-radius: 10px
-  display: none
+  display: block
   a
     color: #808080
     cursor: pointer
