缩短新消息提示宽度

--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -516,7 +516,7 @@ a.page_name
   -moz-border-radius-bottomleft: 10px
   webkit-border-bottom-right-radius: 10px
   webkit-border-bottom-left-radius: 10px
-  display: block
+  display: none
   a
     color: #808080
     cursor: pointer
