--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -85,7 +85,7 @@ pre
     color: #fff
     @include border-radius(8px)
     background-color: $blue
-    span
+    span, em
       color: #fff
     .z_more
       background: url('/images/icons.gif') -100px -40px
