add wall to header

--- a/app/views/layouts/_header_common.html.haml
+++ b/app/views/layouts/_header_common.html.haml
@@ -20,6 +20,10 @@
         我的家
       %span><
         |    
+      %a.z_wall{href: "/wall"}><
+        宽墙
+      %span><
+        | 
       %a.z_buzz{ href: buzz_path, title: "回复"}><
         回复
         %span#comments_count><
