--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -53,11 +53,11 @@ pre
 
 .navigator
   margin-left: $logo-width
-  padding-top: 10px
+  padding-top: 20px
 .navigator, .latest .z_nav
   padding-right: 0
   text-align: right
-  font-size: 14px
+  font-size: 16px
   line-height: 24px
   span
     color: $blue
@@ -83,7 +83,7 @@ pre
     font-style: normal
   .highlight
     color: #fff
-    @include border-radius(8px)
+    @include border-radius(20px)
     background-color: $blue
     span, em
       color: #fff
@@ -105,6 +105,8 @@ pre
     margin-left: -5px
     width: 82px
     _width: 86px
+    i
+      font-size: 16px
 
     div
       border-top: 1px solid #eaeaea
@@ -143,7 +145,7 @@ pre
 a.logo
   display: inline
   border: 0
-  @include size($logo-width, 46px)
+  @include size(200px, 46px)
   background: url('/images/embed/logo.png') no-repeat
   float: left
 
