--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,8 @@
     - js :common
     = include_javascripts *@js
     = csrf_meta_tag
+    %link{ :rel => "stylesheet", :href => "/stylesheets/kuanfont-embedded.css", :media => "screen", :type=> "text/css" }
+    %link{ :rel => "stylesheet", :href => "/stylesheets/animation.css", :media => "screen", :type=> "text/css" }
     %link{ :rel => "shortcut icon", :href => "/images/favicon.ico" }
     :javascript
       document.id(document.documentElement).addClass('js_enabled')
