--- a/app/views/layouts/_dashboard_menu.html.haml
+++ b/app/views/layouts/_dashboard_menu.html.haml
@@ -7,4 +7,8 @@
     %a{ href: favors_posts_path, title: "我喜欢的"}<
       %span 我喜欢的
   .my_search
-    = search_bar("subs")
+    %script
+      alimama_pid="mm_36046208_3482172_11359670";
+      alimama_width=200;
+      alimama_height=200;
+    %script{ src: "http://a.alimama.cn/inf.js" }<
