--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,3 +1,22 @@
+%script
+  (function(win,doc){
+  var s = doc.createElement("script"), h = doc.getElementsByTagName("head")[0];
+  if (!win.alimamatk_show) {
+  s.charset = "gbk";
+  s.async = true;
+  s.src = "http://a.alimama.cn/tkapi.js";
+  h.insertBefore(s, h.firstChild);
+  }
+  var o = {
+  pid: "mm_36046208_3482172_11359996",
+  appkey: "",
+  unid: ""
+  }
+  win.alimamatk_onload = win.alimamatk_onload || [];
+  win.alimamatk_onload.push(o);
+  })(window,document);
+
+
 .footer 
   2011 
   %a{href: "http://www.miibeian.gov.cn/"}
