--- a/app/views/layouts/_dashboard_menu.html.haml
+++ b/app/views/layouts/_dashboard_menu.html.haml
@@ -7,4 +7,4 @@
     %a{ href: favors_posts_path, title: "我喜欢的"}<
       %span 我喜欢的
   .my_search
-    %iframe{ name:"alimamaifrm",frameborder:"0",marginheight:"0", marginwidth:"0", border:"0", scrolling:"no", width:"200", height:"200", src:"http://www.taobao.com/go/app/tbk_app/chongzhi_210_200.php?pid=mm_36046208_3482172_11370477&page=chongzhi_210_200.php&size_w=210&size_h=200&stru_phone=1&stru_game=1&stru_travel=0&size_cat=cst" }<
+    %script{ type:"text/javascript",charset:"gb2312",src:"http://js.adm.cnzz.net/s.php?sid=98567"}<
