--- a/app/views/layouts/_dashboard_menu.html.haml
+++ b/app/views/layouts/_dashboard_menu.html.haml
@@ -7,4 +7,4 @@
     %a{ href: favors_posts_path, title: "我喜欢的"}<
       %span 我喜欢的
   .my_search
-    %script{ type:"text/javascript",charset:"gb2312",src:"http://js.adm.cnzz.net/s.php?sid=98567"}<
+    %script{ type:"text/javascript",charset:"gb2312",src:"http://js.adm.cnzz.net/s.php?sid=98567"}
