--- a/app/views/comments/index.mobile.haml
+++ b/app/views/comments/index.mobile.haml
@@ -10,7 +10,7 @@
                   %a{ :href => blog_path(comment.author.primary_blog) }><
                     = "#{comment.author.name}"
                   ：
-                = auto_link h(comment.content)
+                = CGI.unescapeHTML auto_link h(comment.content)
                 %span.c_date<
                   = "(#{comment.created_at})"
       %li
