--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -17,7 +17,11 @@
   })(window,document);
 
 
-.footer 
+.footer
+  %a{href: "http://www.inidc.net/"}
+  网络服务由北京数据家INIDC提供
+
+  |
   2011 
   %a{href: "http://www.miibeian.gov.cn/"}
     京ICP备11016814
