--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,4 +1,4 @@
-- if Time.now.hour == 17
+- if Time.now.hour == 17 or Time.now.hour == 12
 
   - @sub_title = "#{@inv_user.name} 邀请你上岛测试，发现真实的自己"
   - content_for :site_layout, "start_page registation_dom"
