--- a/app/views/shared/_analytics.html.haml
+++ b/app/views/shared/_analytics.html.haml
@@ -1,13 +1,8 @@
 :javascript
-  window.document.addEvent("domready", function() {
-    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-    setTimeout(function(){
-    new Asset.javascript(gaJsHost + "google-analytics.com/ga.js", {
-      onload: function() {
-        var pageTracker = _gat._getTracker("UA-8893573-3");
-        pageTracker._initData();
-        pageTracker._trackPageview();
-      }
-    });
-    }, 3000);
-  });
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-8893573-3', 'kuandom.com');
+  ga('send', 'pageview');
