--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -29,4 +29,4 @@
     &nbsp;
     = @user.errors[:password_confirmation].first
   .submit_box
-    = f.submit " "
+    <center>暂停更改帐户功能(2014.02.12)</center>
